codeserver/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: codeserver
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.128
  ports:
  - port: 80
    targetPort: 8443
    name: http
  selector:
    app: codeserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      volumes:
        - name: codeserver-vol
          persistentVolumeClaim:
            claimName: codeserver-local-pvc
      containers:
      - name: codeserver
        image: lscr.io/linuxserver/code-server:latest
        ports:
          - containerPort: 8443
        volumeMounts:
          - mountPath: "/config"
            name: codeserver-vol
---
