codeserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  namespace: codeserver
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - code.sushiraccoon.com
    secretName: codeserver-tls
  rules:
  - host: code.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codeserver
            port:
              number: 80
